<resources>
    <string name="app_name" translatable="false">BeSaint</string>
    <string name="res_txtProjectName">BeSaint Project</string>
    <string name="res_txtImageSaints">Picture of three saints</string>
    <string name="res_btnStart">START</string>
    <string name="res_txtSignHeader">Sign</string>
    <string name="res_txtName">Name</string>
    <string name="res_txtInspirationDefault"><![CDATA[<html><body>
<center>
<h1>Welcome to the BeSaint App</h1>
<h2>Spiritual growth is for everyone</h2>
<h3>Learn from the saints and start your own journey!</h3>
</center>
<p>Each journey consists of particular days, which will guide you by means of an inspiration, plan of growth and current progress visualized by the above tabs.</p>
<p>Read the inspiration for the day, perform tasks in the plan and check up on your progress.</p>
<p>Begin by pressing the red button and choose your journey from the list!</p><p> </p><p> </p>
</body></html>]]></string>
    <string name="res_txtSignDescription2">Please, share with us your first name to make the experience more enjoyable. We value your privacy. All personal data is stored on your device and stays offline.</string>
    <string name="res_txtNameHint">Enter your real name</string>
    <string name="res_btnOK">OK</string>
    <string name="res_txtJourneyTitle">Welcome Lukasz</string>
    <string name="res_txtImageSaintsJordan">Picture of Father Jordan among saints</string>
    <string name="res_txtJourneySubtitle">Select your guide and start a journey!</string>
    <string name="res_txtJordanDescription">Image of Father Francis Jordan</string>
    <string name="res_tabLeft">Inspiration</string>
    <string name="res_tabCenter">Plan</string>
    <string name="res_tabRight">Progress</string>
    <string name="res_txtImageSaint">Image of a saint</string>
    <string name="res_txtCheckResolution">I did my resolution for today</string>
    <string name="res_txtFinishSwitch">Finished Day</string>
    <string name="res_txtResolution">Your resolution</string>
    <string name="res_txtHistoryMenu">History</string>
    <string name="res_txtAboutMenu">About</string>
    <string name="res_txtStopMenu">Stop</string>
    <string name="res_txtSettingsMenu">Settings</string>
    <string name="res_txtProfileMenu">Profile</string>
    <string name="res_txtRunningMenu">Active</string>
    <string name="res_txtVersion">BeSaint - VERSION 1.0</string>
    <string name="res_txtMission">Unofficial prototype application by the Polish Province of Salvatorians\nwww.sds.pl
        \n\n<b>Developer:</b> Fr. Łukasz Darowski SDS besaintsds@gmail.com\n\nAll texts in the app are currently used without explicit permission.
        \n\nFor private use only!</string>
    <string name="res_txtLicence"><u>End User Licence Agreement</u></string>
    <string name="res_txtPrivacy"><u>Privacy Statement</u></string>
    <string name="res_txtNightMode">Night mode</string>
    <string name="res_txtEnabled">enabled</string>
    <string name="res_txtDisabled">disabled</string>
    <string name="res_txtProgressMode">Progress Mode (1 week)</string>
    <string name="res_txtActiveJourney">Active Journey</string>
    <string name="res_txtActiveJourneyTitle">Title of the journey</string>
    <string name="res_txtJordan">Father Francis Jordan</string>
    <string name="res_txtDay">Day 1/4</string>
    <string name="res_txtRecommendedJourney">Next Recommended Journey</string>
    <string name="res_txtRecommendedJourneyTitle">Exhortations and admonitions</string>
    <string name="res_txtDay2">Day 0/30</string>
    <string name="res_txtHistoryJourneys">History of your Journeys</string>
    <string name="txtTitle">Jan Paweł II</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="nav_history">History</string>
    <string name="nav_about">About</string>
    <string name="nav_help">Help</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="res_txtPlaceholder" translatable="false">Placeholder...</string>
    <string name="res_txtDayResolution">Planned resolution for day</string>
    <string name="res_txtDayResolutionDefault">No resolution for today</string>
    <string name="res_txtFinishButton">FINISH</string>
    <string name="res_txtToastFinishedDay">Starting a new day...</string>
    <string name="res_txtWelcomeDefault">Welcome</string>
    <string name="res_txtDayLabel">day</string>
    <string name="nav_journey">Journey</string>
    <string name="res_txtLevelLabel">Level</string>
    <string name="res_txtProgressDays">Finished resolutions</string>
    <string name="res_btnResetData">Reset</string>
    <string name="res_txtResetDescription">Clear all app data</string>
    <string name="res_txtToastResetData">All application data is cleared.</string>
    <string name="res_txtEmptyJourney">Choose a new journey</string>
    <string name="res_langHelpFile">help_en.html</string>
    <string name="res_dbName">saints_en.sqlite3</string>
    <string name="res_txtDayLabelPlural">days</string>
</resources>
