<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_group1">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24px"
            android:title="@string/nav_history"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24px"
            android:title="@string/nav_profile"/>
    </group>

    <group android:id="@+id/nav_group2">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_20px"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_feedback_24px"
            android:title="@string/nav_about"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_24px"
            android:title="@string/nav_help"/>
    </group>
</menu>