<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/id_mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"></android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable">

            <android.support.design.widget.TabItem
                android:id="@+id/id_mainTabLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res_tabLeft" />

            <android.support.design.widget.TabItem
                android:id="@+id/id_mainTabCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res_tabCenter" />

            <android.support.design.widget.TabItem
                android:id="@+id/id_mainTabRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res_tabRight" />
        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:onClick="onStartClick"
        android:src="@android:drawable/ic_input_add"
        android:focusable="true" />
</android.support.design.widget.CoordinatorLayout>